--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Tribute Page to Kanna Kamui</title>
 </head>
-
+<link rel="stylesheet" type="text/css" href="assets/css/style.scss"
 <body>
   <div class="container-fluid">
   <div class="background">
