--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="row" align="center">
           <img src="https://media.tenor.com/images/9874a8b8dfaa4131dadce066842fc006/tenor.gif" class="pics_of_kanna img-responsive" / alt="Kanna is sleepy">
           <img src="https://kevinpennyfeather.files.wordpress.com/2017/01/jan-19-2017-00-26-46.gif?w=300&h=168" class="pics_of_kanna img-responsive" alt="Kanna is demanding Kobayashi to return Tohru" />
-          <img class="pics_of_kanna img-responsive" src="https://c.tenor.com/HmAeAigba4UAAAAC/head-pat-dragon-maid.gif?w="400"" alt="Kanna being patted by Kobayashi"
+          <img class="pics_of_kanna img-responsive" src="https://c.tenor.com/HmAeAigba4UAAAAC/head-pat-dragon-maid.gif" alt="Kanna being patted by Kobayashi"
           />
           </div>
           <div class = "row">
