--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p style="font-size:5px">Hail the dragon loli!</p>
       </div>
           </div>
-         <p>Written and coded by <span>Deez Nutz</span></p>
+         <p>Written and coded by <span>Tohru</span></p>
         <p>Gifs and picture belong to their respective owners</p>
     </div>
 </div>
