--- a/index.html
+++ b/index.html
@@ -1,44 +1,255 @@
-<html lang="en">
-<head>
-	<meta charset="utf-8" />
-	<title>Table Style</title>
-	<meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; width=device-width;">
-</head>
+<section>
+  <!--for demo wrap-->
+  <h1>Fixed Table header</h1>
+  <div class="tbl-header">
+    <table cellpadding="0" cellspacing="0" border="0">
+      <thead>
+        <tr>
+          <th>Code</th>
+          <th>Company</th>
+          <th>Price</th>
+          <th>Change</th>
+          <th>Change %</th>
+        </tr>
+      </thead>
+    </table>
+  </div>
+  <div class="tbl-content">
+    <table cellpadding="0" cellspacing="0" border="0">
+      <tbody>
+        <tr>
+          <td>AAC</td>
+          <td>AUSTRALIAN COMPANY </td>
+          <td>$1.38</td>
+          <td>+2.01</td>
+          <td>-0.36%</td>
+        </tr>
+        <tr>
+          <td>AAD</td>
+          <td>AUSENCO</td>
+          <td>$2.38</td>
+          <td>-0.01</td>
+          <td>-1.36%</td>
+        </tr>
+        <tr>
+          <td>AAX</td>
+          <td>ADELAIDE</td>
+          <td>$3.22</td>
+          <td>+0.01</td>
+          <td>+1.36%</td>
+        </tr>
+        <tr>
+          <td>XXD</td>
+          <td>ADITYA BIRLA</td>
+          <td>$1.02</td>
+          <td>-1.01</td>
+          <td>+2.36%</td>
+        </tr>
+        <tr>
+          <td>AAC</td>
+          <td>AUSTRALIAN COMPANY </td>
+          <td>$1.38</td>
+          <td>+2.01</td>
+          <td>-0.36%</td>
+        </tr>
+        <tr>
+          <td>AAD</td>
+          <td>AUSENCO</td>
+          <td>$2.38</td>
+          <td>-0.01</td>
+          <td>-1.36%</td>
+        </tr>
+        <tr>
+          <td>AAX</td>
+          <td>ADELAIDE</td>
+          <td>$3.22</td>
+          <td>+0.01</td>
+          <td>+1.36%</td>
+        </tr>
+        <tr>
+          <td>XXD</td>
+          <td>ADITYA BIRLA</td>
+          <td>$1.02</td>
+          <td>-1.01</td>
+          <td>+2.36%</td>
+        </tr>
+        <tr>
+          <td>AAC</td>
+          <td>AUSTRALIAN COMPANY </td>
+          <td>$1.38</td>
+          <td>+2.01</td>
+          <td>-0.36%</td>
+        </tr>
+        <tr>
+          <td>AAD</td>
+          <td>AUSENCO</td>
+          <td>$2.38</td>
+          <td>-0.01</td>
+          <td>-1.36%</td>
+        </tr>
+        <tr>
+          <td>AAX</td>
+          <td>ADELAIDE</td>
+          <td>$3.22</td>
+          <td>+0.01</td>
+          <td>+1.36%</td>
+        </tr>
+        <tr>
+          <td>XXD</td>
+          <td>ADITYA BIRLA</td>
+          <td>$1.02</td>
+          <td>-1.01</td>
+          <td>+2.36%</td>
+        </tr>
+        <tr>
+          <td>AAC</td>
+          <td>AUSTRALIAN COMPANY </td>
+          <td>$1.38</td>
+          <td>+2.01</td>
+          <td>-0.36%</td>
+        </tr>
+        <tr>
+          <td>AAD</td>
+          <td>AUSENCO</td>
+          <td>$2.38</td>
+          <td>-0.01</td>
+          <td>-1.36%</td>
+        </tr>
+        <tr>
+          <td>AAX</td>
+          <td>ADELAIDE</td>
+          <td>$3.22</td>
+          <td>+0.01</td>
+          <td>+1.36%</td>
+        </tr>
+        <tr>
+          <td>XXD</td>
+          <td>ADITYA BIRLA</td>
+          <td>$1.02</td>
+          <td>-1.01</td>
+          <td>+2.36%</td>
+        </tr>
+        <tr>
+          <td>AAC</td>
+          <td>AUSTRALIAN COMPANY </td>
+          <td>$1.38</td>
+          <td>+2.01</td>
+          <td>-0.36%</td>
+        </tr>
+        <tr>
+          <td>AAD</td>
+          <td>AUSENCO</td>
+          <td>$2.38</td>
+          <td>-0.01</td>
+          <td>-1.36%</td>
+        </tr>
+        <tr>
+          <td>AAX</td>
+          <td>ADELAIDE</td>
+          <td>$3.22</td>
+          <td>+0.01</td>
+          <td>+1.36%</td>
+        </tr>
+        <tr>
+          <td>XXD</td>
+          <td>ADITYA BIRLA</td>
+          <td>$1.02</td>
+          <td>-1.01</td>
+          <td>+2.36%</td>
+        </tr>
+        <tr>
+          <td>AAC</td>
+          <td>AUSTRALIAN COMPANY </td>
+          <td>$1.38</td>
+          <td>+2.01</td>
+          <td>-0.36%</td>
+        </tr>
+        <tr>
+          <td>AAD</td>
+          <td>AUSENCO</td>
+          <td>$2.38</td>
+          <td>-0.01</td>
+          <td>-1.36%</td>
+        </tr>
+        <tr>
+          <td>AAX</td>
+          <td>ADELAIDE</td>
+          <td>$3.22</td>
+          <td>+0.01</td>
+          <td>+1.36%</td>
+        </tr>
+        <tr>
+          <td>XXD</td>
+          <td>ADITYA BIRLA</td>
+          <td>$1.02</td>
+          <td>-1.01</td>
+          <td>+2.36%</td>
+        </tr>
+        <tr>
+          <td>AAC</td>
+          <td>AUSTRALIAN COMPANY </td>
+          <td>$1.38</td>
+          <td>+2.01</td>
+          <td>-0.36%</td>
+        </tr>
+        <tr>
+          <td>AAD</td>
+          <td>AUSENCO</td>
+          <td>$2.38</td>
+          <td>-0.01</td>
+          <td>-1.36%</td>
+        </tr>
+        <tr>
+          <td>AAX</td>
+          <td>ADELAIDE</td>
+          <td>$3.22</td>
+          <td>+0.01</td>
+          <td>+1.36%</td>
+        </tr>
+        <tr>
+          <td>XXD</td>
+          <td>ADITYA BIRLA</td>
+          <td>$1.02</td>
+          <td>-1.01</td>
+          <td>+2.36%</td>
+        </tr>
+        <tr>
+          <td>AAC</td>
+          <td>AUSTRALIAN COMPANY </td>
+          <td>$1.38</td>
+          <td>+2.01</td>
+          <td>-0.36%</td>
+        </tr>
+        <tr>
+          <td>AAD</td>
+          <td>AUSENCO</td>
+          <td>$2.38</td>
+          <td>-0.01</td>
+          <td>-1.36%</td>
+        </tr>
+        <tr>
+          <td>AAX</td>
+          <td>ADELAIDE</td>
+          <td>$3.22</td>
+          <td>+0.01</td>
+          <td>+1.36%</td>
+        </tr>
+        <tr>
+          <td>XXD</td>
+          <td>ADITYA BIRLA</td>
+          <td>$1.02</td>
+          <td>-1.01</td>
+          <td>+2.36%</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</section>
 
-<body>
-<div class="table-title">
-<h3>Data Table</h3>
+
+<!-- follow me template -->
+<div class="made-with-love">
+  Made with
+  <i>♥</i> by
+  <a target="_blank" href="https://codepen.io/nikhil8krishnan">Nikhil Krishnan</a>
 </div>
-<table class="table-fill">
-<thead>
-<tr>
-<th class="text-left">Month</th>
-<th class="text-left">Sales</th>
-</tr>
-</thead>
-<tbody class="table-hover">
-<tr>
-<td class="text-left">January</td>
-<td class="text-left">$ 50,000.00</td>
-</tr>
-<tr>
-<td class="text-left">February</td>
-<td class="text-left">$ 10,000.00</td>
-</tr>
-<tr>
-<td class="text-left">March</td>
-<td class="text-left">$ 85,000.00</td>
-</tr>
-<tr>
-<td class="text-left">April</td>
-<td class="text-left">$ 56,000.00</td>
-</tr>
-<tr>
-<td class="text-left">May</td>
-<td class="text-left">$ 98,000.00</td>
-</tr>
-</tbody>
-</table>
-  
-
-  </body>
