--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href=".food.scss media="screen" />
 <div class="full-bk clear">
   <div class="widget-frame">
     <div class="actions">
@@ -72,3 +75,5 @@
     </div>
   </div>
 </div>
+</head>
+</html>
