--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href=".food.scss media="screen" />
+    <link type="text/css" rel="stylesheet" href="https://raw.githubusercontent.com/Tohrulogy/tohrulogy.github.io/main/food.js" />
+  </head>                                                                
 <div class="full-bk clear">
   <div class="widget-frame">
     <div class="actions">
@@ -75,5 +76,4 @@
     </div>
   </div>
 </div>
-</head>
 </html>
