--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link type="text/css" rel="stylesheet" href="https://raw.githubusercontent.com/Tohrulogy/tohrulogy.github.io/main/food.js" />
+    <link type="text/css" rel="stylesheet" href="https://raw.githubusercontent.com/Tohrulogy/tohrulogy.github.io/main/tohru/style.scss" />
   </head>                                                                
 <div class="full-bk clear">
   <div class="widget-frame">
