--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link type="text/css" rel="stylesheet" href="tohrulogy.github.io/tohru/style.css" />
+    <link type="text/css" rel="stylesheet" href="style.css" />
   </head>                                                                
 <div class="full-bk clear">
   <div class="widget-frame">
