--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link type="text/css" rel="stylesheet" href="style.css">
+  <script src="food.js" type="text/JavaScript">
   </head>                                                                
 <div class="full-bk clear">
   <div class="widget-frame">
