--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <div class="full-bk clear">
   <div class="widget-frame">
     <div class="actions">
-      <span><img src='https://papers.co/wallpaper/papers.co-bj42-apple-iphone-ios13-background-orange-art-36-3840x2400-4k-wallpaper.jpg'></span>
+      <span><img src='https://64.media.tumblr.com/2f55469948a7cd98684bd1406d484dc8/bfd822a73cf66195-ee/s1280x1920/312590b8ce173e7359d48485174ecccc8af64710.jpg'></span>
       <a href='#'>Save</a>
     </div>    
     <div class='img-bk active' data-img='step0'></div>
